Use "overflow: hidden" instad of margin to prevent overflow

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 .textbox-body {
   width: 100%;
   height: 100%;
-  margin-bottom: 2px;
+  overflow: hidden;
 }
 .text {
   width: 100%;
